<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_version">3.5.3</string>
    <string name="app_name">奇点资讯</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="mNewsDetailTitle">在大多数情况下,这个方法还不赖,并且有一些优点</string>
    <string name="mNewsDetailTvExpand">点击展开全文</string>
    <string name="mNewsDetailHeaderTime">2015年05月25日</string>
    <string name="mNewsDetailHeaderTemperature">38℃</string>
    <string name="mNewsDetailHeaderDesc">这里是新闻描述这里是新闻描述这里是新闻描述这里是新闻描述这里是新闻描述这里是新闻描述这里是新闻描述这里是新闻描述这里是新闻描述这里是新闻描述这里是新闻描</string>
    <string name="mNewsDetailHeaderContent">这里是新闻内容这里是新闻内容这里是新闻内容这里是新闻内容\\n这里是新闻内容这里是新闻内容这里是新闻内容这里是新闻内容这里是新闻内容这里是新闻内容</string>
    <string name="mNewsDetailHeaderSourceName">摘至：%1$s</string>
    <string name="mNewsDetailHeaderLocation">发生地点：%1$s</string>
    <string name="press_back_again_exit">再按一次退出应用</string>
    <string name="mNewsDetailHeaderOnclickMore">点击展开全文</string>
    <string name="mNewsDetailHeaderOnclickLess">点击收缩全文</string>
    <string name="home_login_text">
    <![CDATA[
        你可以在这里  <font color="#ffffff"><big>登录</big></font>
    ]]>
    </string>
    <string name="home_login_chat">和金鱼聊聊</string>
    <string name="home_login_mode_join">加入百家</string>
    <string name="home_login_mode_join_slogan">与世界分享你的真知灼见</string>
    <string name="home_login_mode_weixin">使用微信账号登录</string>
    <string name="home_login_mode_sina_weibo">使用新浪账号登录</string>
    <string name="home_login_mode_meizu">使用魅族账号登录</string>
    <string name="home_login_mode_login_warning">
    <![CDATA[
        登录后意味着你同意头条百家的 <font color="#00e17f">&laquo;使用协议&raquo;</font>
    ]]>
    </string>
    <string name="home_logout">退出登录</string>
    <string name="home_digger">一订</string>
    <string name="obtain_red_packet">领红包</string>
    <string-array name="category_list_name">
        <item>谷歌今日焦点</item>
        <item>时事</item>
        <item>娱乐</item>
        <item>科技</item>
        <item>国际</item>
        <item>体育</item>
        <item>财经</item>
        <item>港台</item>
        <item>社会</item>
    </string-array>
    <string-array name="students">
        <item>邓光桥</item>
        <item>邓名流</item>
        <item>向洪伟</item>
        <item>何德聪</item>
        <item>张龙灿</item>
        <item>许仙</item>
        <item>姚明</item>
        <item>乔丹</item>
        <item>邓稼先</item>
        <item>蔡元培</item>
        <item>许三多</item>
        <item>王宝强</item>
        <item>谷歌今日焦点</item>
        <item>时事</item>
        <item>娱乐</item>
        <item>科技</item>
        <item>国际</item>
        <item>体育</item>
        <item>财经</item>
        <item>港台</item>
        <item>社会</item>
    </string-array>
    <string-array name="share_list_name">
        <item>微信朋友圈</item>
        <item>微信好友</item>
        <item>新浪微博</item>
        <item>QQ好友</item>
        <item>短信</item>
        <item>邮件</item>
        <item>转发链接</item>
    </string-array>
    <string-array name="subscription_list_name">
        <item>36氪</item>
        <item>爱范儿</item>
        <item>半糖</item>
        <item>北美省钱快报</item>
        <item>别致</item>
        <item>财新周刊</item>
        <item>第一财经周刊</item>
        <item>豆瓣东西</item>
        <item>豆瓣一刻</item>
        <item>毒舌指南</item>
        <item>国家地理</item>
        <item>果壳精选</item>
        <item>果库</item>
        <item>好好住</item>
        <item>好物</item>
        <item>和讯财经</item>
        <item>虎嗅</item>
        <item>华尔街见闻</item>
        <item>欢喜Fancy</item>
        <item>机核</item>
        <item>极客头条</item>
        <item>煎蛋</item>
        <item>节操精选</item>
        <item>界面</item>
        <item>快科技</item>
        <item>雷锋网</item>
        <item>马蜂窝自由行</item>
        <item>面包猎人</item>
        <item>内涵段子</item>
        <item>企鹅吃喝指南</item>
        <item>糗事百科</item>
        <item>去哪儿旅游</item>
        <item>任玩堂</item>
        <item>三联生活周刊</item>
        <item>少数派</item>
        <item>手游那点事</item>
        <item>数字尾巴</item>
        <item>太平洋电脑网</item>
        <item>钛媒体</item>
        <item>体育疯</item>
        <item>土巴兔装修</item>
        <item>网易财经</item>
        <item>威锋</item>
        <item>无讼阅读</item>
        <item>严肃八卦</item>
        <item>一个</item>
        <item>一人一城</item>
        <item>悦食家</item>
        <item>悦食中国</item>
        <item>AppSo</item>
        <item>HTO男人</item>
        <item>IT之家</item>
        <item>v 电影</item>
        <item>ZEALER</item>
    </string-array>
    <string-array name="bg_special_colors">
        <item name="item1">#dd91b5</item>
        <item name="item2">#88b6e7</item>
        <item name="item3">#b7d194</item>
        <item name="item4">#83cac2</item>
        <item name="item5">#cfba8f</item>
        <item name="item6">#dcbe92</item>
        <item name="item7">#c192dc</item>
        <item name="item8">#9792dc</item>
        <item name="item9">#92bcdc</item>
        <item name="item10">#dcd992</item>
        <item name="item11">#dc9c92</item>
        <item name="item12">#a2d7d5</item>
        <item name="item13">#aba2d7</item>
    </string-array>
    <string-array name="bg_focus_colors">
        <item name="item1">#f46b75</item>
        <item name="item2">#a87dd7</item>
        <item name="item3">#5994e3</item>
        <item name="item4">#85ca4b</item>
        <item name="item5">#eba85d</item>
        <item name="item6">#64b6eb</item>
    </string-array>
    <string name="drawer_btn_rss">频道管理</string>
    <string name="subscribe_my_category">我的频道 (单击增删频道，长按拖拽排序)</string>
    <string name="subscribe_more_category">更多频道 (点击添加更多)</string>
    <string name="subscribe_more_category_info">单击添加频道</string>
    <string name="subscribe_manager_category_info">单击增删频道</string>
    <string name="subscribe_manager_category_info_2">单击增删频道，长按拖拽排序</string>
    <string name="aty_guide_login_txt1">智能推荐您喜欢的文章</string>
    <string name="aty_guide_login_txt2">只需一键登录</string>
    <string name="aty_guide_login_txt3">先随便看看</string>
    <string name="aty_about_copy_right">Copyring@2016 lieying.All Rights Reserved</string>
    <string name="aty_my_comment_oneplus">+1</string>
    <string name="aty_my_comment_all_has_show">已显示全部内容</string>
    <string name="my_comment_cool_person">高冷的ta</string>
    <string name="my_comment_nor_comment">还没有发表过任何评论</string>
    <string name="title_activity_attention2">Attention2Activity</string>
</resources>