<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/new_color9"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/common_header_bg"
        >

        <ImageView
            android:id="@+id/mAboutLeftBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="16dp"
            android:src="@drawable/btn_left_back"
            android:clickable="true"
            android:background="@drawable/bg_left_back_selector"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="关于"
            android:textColor="@color/new_color7"
            android:textSize="@dimen/font1"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0.56dp"
            android:layout_alignParentBottom="true"
            android:background="@color/new_color5"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="128dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        >
        <ImageView
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/app_icon"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font3"
            android:textColor="@color/new_color1"
            android:text="@string/app_name"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/mAboutVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#97a3b1"
            android:textSize="@dimen/font3"
            android:text="@string/app_version"
            android:layout_marginTop="18dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_about_company_logo"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#abb6c1"
            android:textSize="@dimen/font5"
            android:layout_marginTop="12dp"
            android:text="@string/aty_about_copy_right"
            />
    </LinearLayout>
</RelativeLayout>