<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/mHomeLoginWrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/mHomeLogin"
            android:layout_width="230dp"
            android:layout_height="55dp"
            android:background="@drawable/bg_login_header"
            android:gravity="center_vertical"
            android:paddingLeft="105dp"
            android:text="@string/home_login_text"
            android:textSize="12sp"/>

        <LinearLayout
            android:id="@+id/mDigger"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_below="@id/mHomeLogin"
            android:background="@drawable/bg_login_footer"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:src="@drawable/ic_user_login_digger"/>

            <com.news.yazhidao.widget.TextViewExtend
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/obtain_red_packet"
                android:textColor="@color/black"
                android:textSize="18sp"/>

        </LinearLayout>

        <View
            android:id="@+id/mHomeLoginDivide1"
            android:layout_width="230dp"
            android:layout_height="1px"
            android:layout_below="@id/mDigger"
            android:background="@color/divide_home_login"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/mHomeChatWrapper"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_below="@id/mHomeLoginDivide1"
            android:background="@drawable/bg_login_footer"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:src="@drawable/ic_home_chat"/>

            <com.news.yazhidao.widget.TextViewExtend
                android:id="@+id/mHomeChat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_login_chat"
                android:textColor="@color/home_login_chat"
                android:textSize="18sp"/>

        </LinearLayout>


        <View
            android:id="@+id/mHomeLoginDivide"
            android:layout_width="230dp"
            android:layout_height="1px"
            android:layout_below="@id/mHomeChatWrapper"
            android:background="@color/divide_home_login"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/mHomeLogout"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_below="@id/mHomeLoginDivide"
            android:background="@drawable/bg_login_footer"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="13dp"
                android:src="@drawable/ic_user_logout"/>

            <com.news.yazhidao.widget.TextViewExtend
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/home_logout"
                android:textColor="@color/home_logout"
                android:textSize="18sp"/>

        </LinearLayout>


        <ImageView
            android:id="@+id/mHomeLoginCancel"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_below="@id/mHomeLogout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:src="@drawable/bg_date_close"
            android:scaleType="centerInside"
            />
    </RelativeLayout>

    <com.news.yazhidao.widget.RoundedImageView
        android:id="@+id/mHomeUserIcon"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_alignLeft="@id/mHomeLoginWrapper"
        android:layout_alignTop="@id/mHomeLoginWrapper"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-35dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_user_login_default"
        android:background="@drawable/bg_home_user_icon"
        app:border_color="@color/white"
        app:border_width="3dp"
        app:corner_radius="60dp"/>
</RelativeLayout>